# pipeline

./: README.md
DagsterProject/: pyproject.toml
DagsterProject/dagsterproject/: pipeline.py  result1.csv
DagsterProject/dagsterproject/tmp3l6up3pb/history/: runs.db
DagsterProject/dagsterproject/tmp3l6up3pb/history/runs/: 5b462212-dcfe-43c9-bd57-b4257a138cc5.db  e613f681-c607-48b5-8b6f-8ddc86f1a9d2.db  index.db
DagsterProject/dagsterproject/tmp3l6up3pb/schedules/: schedules.db
DagsterProject/dagsterproject/tmp3l6up3pb/storage/e613f681-c607-48b5-8b6f-8ddc86f1a9d2/get_domain_of_url/: result
PrefectProject/: pyproject.toml
PrefectProject/prefectproject/: pipeline.py
example_pipeline/: SMBD.db  norm.csv  pipeline.py
pipelines/: dbwork.py  tasks.py
